<?xml version="1.0" encoding="utf-8"?>
<!-- 脚本列表：勾选删除 / 导入 / 导出 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_script_import"
        android:title="@string/script_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_script_export"
        android:title="@string/script_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_script_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/script_delete_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_script_select_cancel"
        android:title="@string/script_select_cancel"
        android:visible="false"
        app:showAsAction="never" />

</menu>
