<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/jump_position_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="postalAddress"
        android:hint="@string/jump_position_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="2"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/jump_position_tips"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/RadioGroupJumpType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/jump_type_bd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/input_position_baidu" />

        <RadioButton
            android:id="@+id/jump_type_gps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input_position_gps" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/jump_position_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_position_paste" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/jump_position_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_position_cancel" />

        <Button
            android:id="@+id/jump_position_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/jump_position_ok" />

    </LinearLayout>
</LinearLayout>
